[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scenes/Player/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Effects Pack 12/1/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Effects Pack 12/1/24.png" type="Texture" id=3]
[ext_resource path="res://Assets/Effects Pack 12/1/21.png" type="Texture" id=4]
[ext_resource path="res://Assets/Effects Pack 12/1/22.png" type="Texture" id=5]
[ext_resource path="res://Assets/Effects Pack 12/1/27.png" type="Texture" id=6]
[ext_resource path="res://Assets/Effects Pack 12/1/29.png" type="Texture" id=7]
[ext_resource path="res://Assets/Effects Pack 12/1/30.png" type="Texture" id=8]
[ext_resource path="res://Assets/Effects Pack 12/1/26.png" type="Texture" id=9]
[ext_resource path="res://Assets/Effects Pack 12/1/25.png" type="Texture" id=10]
[ext_resource path="res://Assets/Effects Pack 12/1/20.png" type="Texture" id=11]
[ext_resource path="res://Assets/Effects Pack 12/1/23.png" type="Texture" id=12]
[ext_resource path="res://Assets/Effects Pack 12/1/28.png" type="Texture" id=13]
[ext_resource path="res://Assets/Effects Pack 12/1/3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Effects Pack 12/1/9.png" type="Texture" id=15]
[ext_resource path="res://Assets/Effects Pack 12/1/10.png" type="Texture" id=16]
[ext_resource path="res://Assets/Effects Pack 12/1/14.png" type="Texture" id=17]
[ext_resource path="res://Assets/Effects Pack 12/1/15.png" type="Texture" id=18]
[ext_resource path="res://Assets/Effects Pack 12/1/18.png" type="Texture" id=19]
[ext_resource path="res://Assets/Effects Pack 12/1/17.png" type="Texture" id=20]
[ext_resource path="res://Assets/Effects Pack 12/1/19.png" type="Texture" id=21]
[ext_resource path="res://Assets/Effects Pack 12/1/11.png" type="Texture" id=22]
[ext_resource path="res://Assets/Effects Pack 12/1/16.png" type="Texture" id=23]
[ext_resource path="res://Assets/Effects Pack 12/1/8.png" type="Texture" id=24]
[ext_resource path="res://Assets/Effects Pack 12/1/7.png" type="Texture" id=25]
[ext_resource path="res://Assets/Effects Pack 12/1/5.png" type="Texture" id=26]
[ext_resource path="res://Assets/Effects Pack 12/1/4.png" type="Texture" id=27]
[ext_resource path="res://Assets/Effects Pack 12/1/12.png" type="Texture" id=28]
[ext_resource path="res://Assets/Effects Pack 12/1/13.png" type="Texture" id=29]
[ext_resource path="res://Assets/Effects Pack 12/1/6.png" type="Texture" id=30]
[ext_resource path="res://Assets/Effects Pack 12/1/2.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 31 ), ExtResource( 14 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=21]
radius = 12.0

[node name="Projectile" type="Area2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 1 )
Damage = 50
SPEED = 200.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 20 )
frame = 10
speed_scale = 5.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 21 )

[connection signal="area_entered" from="." to="." method="_on_Projectile_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_Projectile_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Projectile_body_shape_entered"]
